<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/base_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_base_margin"
        android:layout_marginBottom="@dimen/half_base_margin"
        android:text="@string/contact_title" />

    <TextView
        android:id="@+id/postalAddressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_base_margin"
        android:layout_marginBottom="@dimen/half_base_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/contact_postal_address" />

    <TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_base_margin"
        android:layout_marginBottom="@dimen/half_base_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/contact_email" />

    <TextView
        android:id="@+id/phoneView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_base_margin"
        android:layout_marginBottom="@dimen/half_base_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/contact_phone_number" />
</LinearLayout>